--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--suppress ALL -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -22,7 +22,7 @@
             android:layout_marginEnd="50dp"
             android:layout_toStartOf="@+id/btn_profile"
             android:padding="18dp"
-            android:text="welcome_username" />
+            android:text="Welcome, Username" />
 
         <ImageView
             android:id="@+id/btn_fav"
