Add Lint, MVVM, Dependency Injection

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -89,18 +89,15 @@
                 android:layout_below="@+id/tv_date"
                 android:text="Sinopsis" />
 
-            <ToggleButton
-                android:id="@+id/toggleFavorit"
+            <ImageView
+                android:id="@+id/favorites_btn"
                 android:layout_width="38dp"
                 android:layout_height="38dp"
-                android:layout_below="@id/tv_sinopsisfilmdetail"
                 android:layout_marginTop="14dp"
                 android:layout_marginRight="32dp"
-                android:background="@drawable/ic_baseline_favorite_24"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:textOff=""
-                android:textOn="" />
+                android:layout_below="@id/tv_sinopsisfilmdetail"
+                android:contentDescription="TODO"
+                android:src="@drawable/ic_baseline_favorite_24" />
 
 
         </RelativeLayout>
