--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FavoriteFragment">
+    tools:context=".view.FavoriteFragment"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/Favoritescreen"
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="Favorite"
+        android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold" />
 
@@ -20,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/Favoritescreen"
-        android:layout_marginTop="1dp" />
+        android:layout_marginTop="1dp"
+        tools:listitem="@layout/item_favmovie"/>
 
 </RelativeLayout>
