--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,109 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blue"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.DetailFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tb_detail"
-        android:layout_width="172dp"
-        android:background="@color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-
-            <TextView
-                android:id="@+id/tv_judulDetail"
-                style="@style/textjudul"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="15dp"
-                android:text="Detail" />
-
-        </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/data"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tb_detail"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/white"
-        android:elevation="5dp"
-        app:cardCornerRadius="15dp">
+        android:layout_height="642dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:scrollbars="none"
+        tools:ignore="UselessParent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_filmimagedetail"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_launcher_background" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_gravity="center">
+
+                <!-- add a Image image.png in your Drawable folder -->
+                <ImageView
+                    android:id="@+id/iv_filmimagedetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/img_placeholder"
+                    android:contentDescription="TODO"
+                    tools:ignore="ContentDescription" />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/tv_namafilmdetail"
-                style="@style/textjudul"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/iv_filmimagedetail"
-                android:layout_centerHorizontal="true"
-                android:text="Nama Film" />
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:text="Title"
+                android:textSize="25sp" />
 
-            <TextView
-                android:id="@+id/tv_media_type_date"
-                style="@style/textbody"
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewOverview"
+                android:outlineProvider="none"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_namafilmdetail"
-                android:text="Tipe Media" />
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                app:cardBackgroundColor="@color/cardColor"
+                app:cardCornerRadius="10dp">
 
-            <TextView
-                android:id="@+id/tv_date"
-                style="@style/textbody"
-                android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/tv_sinopsisfilmdetail"
+                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="overview" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewText"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_media_type_date"
-                android:text="Date" />
+                android:outlineProvider="none"
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="100dp"
+                app:cardBackgroundColor="@color/cardColor"
+                app:cardCornerRadius="10dp">
 
-            <TextView
-                android:id="@+id/tv_sinopsisfilmdetail"
-                style="@style/textbody"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_date"
-                android:text="Sinopsis" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-            <ImageView
-                android:id="@+id/favorites_btn"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginRight="32dp"
-                android:layout_below="@id/tv_sinopsisfilmdetail"
-                android:contentDescription="TODO"
-                android:src="@drawable/ic_baseline_favorite_24" />
+                    <TextView
+                        android:id="@+id/tv_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="release"
+                        android:textColor="@color/white"/>
 
+                    <TextView
+                        android:id="@+id/tv_popularity"
+                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="popularity" />
 
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/tv_language"
+                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="language" />
 
-    </androidx.cardview.widget.CardView>
+                    <ToggleButton
+                        android:id="@+id/toggleFavorit"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
+                        android:background="@drawable/ic_baseline_favorite_24"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:textOff=""
+                        android:textOn="" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
-
