--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         tools:context=".HomeFragment">
 
         <TextView
@@ -22,7 +23,8 @@
             android:layout_marginEnd="50dp"
             android:layout_toStartOf="@+id/btn_profile"
             android:padding="18dp"
-            android:text="Welcome, Username" />
+            android:text="Welcome, Username"
+            android:textColor="@color/white"/>
 
         <ImageView
             android:id="@+id/btn_fav"
@@ -48,6 +50,7 @@
             android:layout_below="@id/welcome"
             android:gravity="center_horizontal"
             android:text="Home"
+            android:textColor="@color/white"
             android:textSize="34sp"
             android:textStyle="bold" />
 
