--- a/app/src/main/res/layout/item_favmovie.xml
+++ b/app/src/main/res/layout/item_favmovie.xml
@@ -1,55 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:layout_margin="20dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
-    android:id="@+id/cardFilm"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardMaxElevation="5dp"
+    app:cardCornerRadius="15dp"
+    android:layout_margin="20dp"
+    android:id="@+id/recom"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id = "@+id/detail_fav"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/iv_filmimage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:id="@+id/iv_filmimage"
+            android:layout_gravity="center"
             android:src="@drawable/ic_launcher_background"
-            android:layout_marginEnd="20dp"
-            android:contentDescription="TODO" />
+            android:contentDescription="TODO"
+            tools:ignore="ContentDescription" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_namafilm"
-            android:text="Nama Film"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_toEndOf="@+id/iv_filmimage"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginTop="10dp"
+            android:text="Judul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tv_release"
+            android:layout_marginTop="10dp"
+            android:text="Tanggal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_overview"
-            android:text="Ulasan"
-            android:textSize="17sp"
-            android:layout_toEndOf="@+id/iv_filmimage"
-            android:layout_below="@+id/tv_namafilm"
-            android:layout_marginBottom="5dp"/>
+            android:layout_height="wrap_content"/>
 
         <CheckBox
             android:id="@+id/favorites_check_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_overview"
-            android:layout_alignParentRight="true"
             android:button="@drawable/ic_baseline_delete_24" />
 
+    </LinearLayout>
 
-
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
